K8s/strip-api.yml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: strip-api
  namespace: default
spec:
  stripPrefix:
    prefixes:
      - /api
