K8s/backend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: agent-backend
spec:
  replicas: 2

  selector:
    matchLabels:
      app: agent-backend

  template:
    metadata:
      labels:
        app: agent-backend


    spec:
      containers:
        - name: backend
          image: bula0023/agent-backend:1.0.0
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
          livenessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 10
            periodSeconds: 10

          readinessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 5

          resources:
            requests:
              cpu: "250m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
