K8s/frontend-deployment.yml
apiVersion: apps/v1

kind: Deployment

metadata:
  name: agent-frontend

spec:
  replicas: 1

  selector:
    matchLabels:
      app: agent-frontend

  template:
    metadata:
      labels:
        app: agent-frontend

    spec:
      containers:
        - name: frontend
          image: bula0023/agent-frontend:1.0.0

          ports:
            - containerPort: 5173
