K8s/postgres-deployment.yml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: postgres

spec:
  replicas: 1

  selector:
    matchLabels:
      app: postgres

  template:
    metadata:
      labels:
        app: postgres

    spec:
      containers:
        - name: postgres
          image: postgres:16-alpine

          ports:
            - containerPort: 5432
