K8s/backend-service.yml
apiVersion: v1
kind: Service

metadata:
  name: agent-backend-service

spec:
  selector:
    app: agent-backend

  ports:
    - port: 8000
      targetPort: 8000

  type: ClusterIP
