K8s/chroma-service.yml
apiVersion: v1
kind: Service

metadata:
  name: chroma-service

spec:
  selector:
    app: chroma

  ports:
    - port: 8000
      targetPort: 8000

  type: ClusterIP
