K8s/frontend-service.yml
apiVersion: v1
kind: Service

metadata:
  name: agent-frontend-service

spec:
  selector:
    app: agent-frontend

  ports:
    - port: 5173
      targetPort: 5173

  type: ClusterIP
