K8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: agent-ingress
  namespace: default
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: default-strip-api@kubernetescrd
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: traefik

  tls:
    - hosts:
        - agent-orchestration.duckdns.org
      secretName: agent-orchestration-tls

  rules:
    - host: agent-orchestration.duckdns.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: agent-frontend-service
                port:
                  number: 5173

          - path: /api
            pathType: Prefix
            backend:
              service:
                name: agent-backend-service
                port:
                  number: 8000
